--- a/Homework/index.css
+++ b/Homework/index.css
@@ -68,8 +68,8 @@ body {
 }
 .start {
     display: flex;
+    align-items: flex-end;
     justify-content: center;
-    align-items: center;
     background-color: yellow;
     box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.75);
     -webkit-box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.75);
@@ -92,7 +92,8 @@ body {
     -webkit-box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.75);  
 }
-/* .fa-star {
-    width: 50px;
-    height: 50px;
-} */
+.fa-star {
+    color: blue;
+    position: absolute;
+    top: 5px;
+    left: 540px;}
